--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <version>4.10.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.8</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
